# clash-multiplatform-runtime

./: .gitignore  README.md  build.bat  build.sh
.github/workflows/: build.yaml
starter/: Cargo.toml  build.rs
starter/extra/: app.manifest  app.rc
starter/src/: dirs.rs  logging.rs  main.rs  metadata.rs  options.rs  startup.rs
starter/src/linux/: dirs.rs  jvm.rs  mod.rs  redirect.rs
starter/src/utils/: errors.rs  java.rs  mod.rs  strings.rs
starter/src/win32/: dirs.rs  jvm.rs  mod.rs  redirect.rs  strings.rs  ui.rs
